// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display Mission Components Should display Mission items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="missionContainer"
      >
        <div
          class="headers"
        >
          <div>
            <h2>
              Mission
            </h2>
          </div>
          <div>
            <h2>
              Description
            </h2>
          </div>
          <div>
            <h2>
              Status
            </h2>
          </div>
          <div />
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="missionContainer"
    >
      <div
        class="headers"
      >
        <div>
          <h2>
            Mission
          </h2>
        </div>
        <div>
          <h2>
            Description
          </h2>
        </div>
        <div>
          <h2>
            Status
          </h2>
        </div>
        <div />
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Display Profile Components Should display Mission items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="container"
        >
          <div
            class="myMissions"
          >
            <h2>
              My Missions
            </h2>
            <div
              class="cardsContainer"
            >
              <p>
                No missions booked yet
              </p>
            </div>
          </div>
          <div
            class="myRocket"
          >
            <h2>
              My Rockets
            </h2>
            <div
              class="cardsContainer"
            >
              <p>
                No rockets have been reserved
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="container"
      >
        <div
          class="myMissions"
        >
          <h2>
            My Missions
          </h2>
          <div
            class="cardsContainer"
          >
            <p>
              No missions booked yet
            </p>
          </div>
        </div>
        <div
          class="myRocket"
        >
          <h2>
            My Rockets
          </h2>
          <div
            class="cardsContainer"
          >
            <p>
              No rockets have been reserved
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Display Profile Components Should display Profile items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="container"
        >
          <div
            class="myMissions"
          >
            <h2>
              My Missions
            </h2>
            <div
              class="cardsContainer"
            >
              <p>
                No missions booked yet
              </p>
            </div>
          </div>
          <div
            class="myRocket"
          >
            <h2>
              My Rockets
            </h2>
            <div
              class="cardsContainer"
            >
              <p>
                No rockets have been reserved
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="container"
      >
        <div
          class="myMissions"
        >
          <h2>
            My Missions
          </h2>
          <div
            class="cardsContainer"
          >
            <p>
              No missions booked yet
            </p>
          </div>
        </div>
        <div
          class="myRocket"
        >
          <h2>
            My Rockets
          </h2>
          <div
            class="cardsContainer"
          >
            <p>
              No rockets have been reserved
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Navigation component should render Header component 1`] = `
<div>
  <header
    class="headerSection"
  >
    <section
      class="logoSection"
    >
      <img
        alt="logo"
        class="logo"
        src="planet1.png"
      />
      <h1>
        Space Travelers Hub
      </h1>
    </section>
    <nav
      class="navLinks"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
        style="color: rgb(100, 149, 237); font-weight: 700; text-decoration: underline;"
      >
        Rockets
      </a>
      <a
        class=""
        href="/missions"
        style="font-weight: regular;"
      >
        Missions
      </a>
      <div>
        |
      </div>
      <a
        class=""
        href="/myprofile"
        style="font-weight: regular;"
      >
        My Profile
      </a>
    </nav>
  </header>
  <hr />
</div>
`;
